--- a/node-red-react-editor/index.html
+++ b/node-red-react-editor/index.html
@@ -7,11 +7,9 @@
     <title>webpack tutorial</title>
   </head>
   <body>
-  	
-  	<div id="root">
-  		
-  	</div>
-    
+  	 <div style="position:absolute;left:300px;" id="additional"></div>
+  	 <div id="root"></div>
+   
     <script src="http://localhost:8080/static/editor.js"></script>
   </body>
 
