--- a/node-red-react-editor/index.html
+++ b/node-red-react-editor/index.html
@@ -9,7 +9,8 @@
   <body>
   	 
   	 <div id="root"></div>
-     <div id="additional"></div>
+     <div id="sample"></div>
+    <div id="sentiment"></div>
     <script src="http://localhost:8080/static/editor.js"></script>
   </body>
 
