--- a/node-red-react-editor/index.html
+++ b/node-red-react-editor/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
-    <title>webpack tutorial</title>
+    <title>databox editor</title>
   </head>
   <body>
   	<div id="root"></div>
