adding in github integration

--- a/node-red-react-editor/index.html
+++ b/node-red-react-editor/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   	<div id="root"></div>
-    <script src="http://localhost:8080/static/editor.js"></script>
+    <script src="static/editor.js"></script>
   </body>
 
 </html>
