--- a/index.html
+++ b/index.html
@@ -1,17 +1,4 @@
 <!doctype html>
-<!--
-
-  Instructions:
-
-  - Save this file.
-  - Replace "USER" with your GitHub username.
-  - Replace "REPO" with your GitHub repo name.
-  - Replace "Your Project" with your project name.
-  - Upload this file (or commit to GitHub Pages).
-
-  Customize as you see fit!
-
--->
 <html>
 <head>
   <meta charset='utf-8'>
@@ -36,7 +23,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('USER/REPO')
+      fetcher: Flatdoc.github('me-box/iot.red', 'tutorial.md')
     });
   </script>
 </head>
@@ -44,7 +31,7 @@
 
   <div class='header'>
     <div class='left'>
-      <h1>Your Project</h1>
+      <h1>databox sdk</h1>
       <ul>
         <li><a href='https://github.com/me-box/iot.red'>View on GitHub</a></li>
         <li><a href='https://github.com/me-box/iot.red/issues'>Issues</a></li>
