--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('me-box/iot.red', 'tutorial.md')
+      fetcher: Flatdoc.github('me-box/iot.red', 'docs/tutorial.md')
     });
   </script>
 </head>
