--- a/tutorial.html
+++ b/tutorial.html
@@ -23,7 +23,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('me-box/iot.red', 'docs/overview.md')
+      fetcher: Flatdoc.github('me-box/iot.red', 'docs/tutorial.md')
     });
   </script>
 </head>
@@ -33,15 +33,14 @@
     <div class='left'>
       <h1>databox sdk</h1>
       <ul>
-        <li><a href='/'>overview</a></li>
-        <li><a href='/tutorial.html'>using the sdk</a></li>
-        <li><a href='/developers.html'>for developers</a></li>
-        <li><a href='https://github.com/me-box/iot.red'>
+        <li><a href='https://github.com/me-box/iot.red'>overview</a></li>
+        <li><a href='https://github.com/me-box/iot.red/tutorial.html'>using the sdk</a></li>
+        <li><a href='https://github.com/me-box/iot.red/developers.html'>for developers</a></li>
       </ul>
     </div>
     <div class='right'>
       <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=me-box&amp;repo=iot.red&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;repo=REPO&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
 
