--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <h1>databox sdk</h1>
       <ul>
         <li><a href='/'>overview</a></li>
-        <li><a href='/tutorial.html'>using the sdk</a></li>
-        <li><a href='/developers.html'>for developers</a></li>
-        <li><a href='https://github.com/me-box/iot.red'>
+        <li><a href='./tutorial.html'>using the sdk</a></li>
+        <li><a href='./developers.html'>for developers</a></li>
+        <li><a href='https://github.com/me-box/iot.red'></a></li>
       </ul>
     </div>
     <div class='right'>
