--- a/developers.html
+++ b/developers.html
@@ -33,7 +33,7 @@
     <div class='left'>
       <h1>databox sdk</h1>
       <ul>
-        <li><a href='/'>overview</a></li>
+        <li><a href='/iot.red'>overview</a></li>
         <li><a href='./tutorial.html'>using the sdk</a></li>
         <li><a href='./developers.html'>for developers</a></li>
         <li><a href='https://github.com/me-box/iot.red'></a></li>
