--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-      fetcher: Flatdoc.github('me-box/iot.red', 'docs/overview.md')
+      fetcher: Flatdoc.github('me-box/databox-sdk', 'docs/overview.md')
     });
   </script>
 </head>
@@ -33,15 +33,15 @@
     <div class='left'>
       <h1>databox sdk</h1>
       <ul>
-        <li><a href='/iot.red'>overview</a></li>
+        <li><a href='/databox-sdk'>overview</a></li>
         <li><a href='./tutorial.html'>using the sdk</a></li>
         <li><a href='./developers.html'>for developers</a></li>
-        <li><a href='https://github.com/me-box/iot.red'></a></li>
+        <li><a href='https://github.com/me-box/databox-sdk'></a></li>
       </ul>
     </div>
     <div class='right'>
       <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=me-box&amp;repo=iot.red&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=me-box&amp;repo=databox-sdk&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
 
