--- a/src/client/assets/index.html
+++ b/src/client/assets/index.html
@@ -8,12 +8,17 @@
   <link rel="shortcut icon" href="/images/favicon.ico">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://unpkg.com/react@latest/dist/react.js"></script>
+  <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
+  <script src="/lib/store.js"></script>
+  <script src="/lib/installer.js"></script>
+  <script src="/lib/nodelib.js"></script>
+ 
 </head>
 <body>
 
 <div id="app"></div>
 
-<script src="/js/vendor.bundle.js"></script>
 <script src="/js/application.js"></script>
 </body>
 </html>
