--- a/src/client/assets/index.html
+++ b/src/client/assets/index.html
@@ -11,7 +11,7 @@
   <script src="/lib/react-15.6.1.min.js"></script>
   <script src="/lib/reactdom-15.6.1.min.js"></script>
   <script src="/lib/nodelib.js"></script>
-
+  <script src="/lib/flow.js"></script>
 </head>
 <body>
 
